--- a/Auto mpg.ipynb
+++ b/Auto mpg.ipynb
@@ -660,7 +660,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Not much could be done with this dataset,still got a very low mean_Square_error of 9.66 using Ridge regul"
+    "Not much hasbeen done with this dataset,still got a very low mean_Square_error of 9.66 using Ridge regularisation"
    ]
   }
  ],
